SHA-130 - cleanup exception handling