@@ -1,5 +1,6 @@
 package com.codecrate.shard.ui.command;
 
+import java.io.IOException;
 import java.lang.reflect.Method;
 
 import javax.swing.JOptionPane;
@@ -31,41 +32,59 @@ public class BrowserLauncherCommand extends ApplicationWindowAwareCommand {
 	//     BareBonesBrowserLaunch.openURL(url);            //
 	//  Public Domain Software -- Free to Use as You Like  //
 	/////////////////////////////////////////////////////////
-	public class BareBonesBrowserLauncher {
+	public static class BareBonesBrowserLauncher {
+		private static final String[] BROWSERS = new String[] {
+			"firefox",
+			"opera",
+			"konqueror",
+			"epiphany",
+			"mozilla",
+			"netscape" };
+
+		private static final String WINDOWS_EXEC_COMMAND = "rundll32 url.dll,FileProtocolHandler ";
+		private static final String MAC_FILE_MANAGER_CLASS = "com.apple.eio.FileManager";
 		private static final String errMsg = "Error attempting to launch web browser";
 
 		public void openURL(String url) {
 			String osName = System.getProperty("os.name");
+			Runtime runtime = Runtime.getRuntime();
 			try {
 				if (osName.startsWith("Mac OS")) {
-					Class fileMgr = Class.forName("com.apple.eio.FileManager");
+					Class fileMgr = Class.forName(MAC_FILE_MANAGER_CLASS);
 					Method openURL = fileMgr.getDeclaredMethod("openURL", new Class[] { String.class });
 					openURL.invoke(null, new Object[] { url });
 				} else if (osName.startsWith("Windows")) {
-					Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
-				} else { //assume Unix or Linux
-					String[] browsers = new String[] {
-							"firefox",
-							"opera",
-							"konqueror",
-							"epiphany",
-							"mozilla",
-							"netscape" };
-					String browser = null;
-					for (int count = 0; count < browsers.length && browser == null; count++)
-						if (Runtime.getRuntime().exec(
-								new String[] { "which", browsers[count] })
-								.waitFor() == 0)
-							browser = browsers[count];
-					if (browser == null) {
-						throw new Exception("Could not find web browser");
-					} else {
-						Runtime.getRuntime().exec(new String[] { browser, url });
-					}
+					runtime.exec(WINDOWS_EXEC_COMMAND + url);
+				} else {
+					String browser = getAvailableBrowser(runtime);
+					runtime.exec(new String[] { browser, url });
 				}
 			} catch (Exception e) {
 				JOptionPane.showMessageDialog(null, errMsg + ":\n" + e.getLocalizedMessage());
 			}
+		}
+
+		private String getAvailableBrowser(Runtime runtime) throws InterruptedException, IOException {
+			for (int count = 0; count < BROWSERS.length; count++) {
+				String browser = BROWSERS[count];
+				if (runtime.exec(new String[] { "which", browser }).waitFor() == 0) {
+					return browser;
+				}
+			}
+			throw new IllegalStateException("No supported browser found among: [" + stringify(BROWSERS) + "]");
+		}
+
+		private String stringify(String[] strings) {
+			StringBuffer result = new StringBuffer();
+			for (int x = 0; x < strings.length; x++) {
+				String string = strings[x];
+				result.append(string);
+
+				if (x - 1 != strings.length) {
+					result.append(", ");
+				}
+			}
+			return result.toString();
 		}
 	}
 }
